Fixing Bokeh issue with depreciated class

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
-biopython==1.78
-bokeh==2.2.3
-cogent3==2020.12.21a0
-colorcet==2.0.2
-matplotlib==3.3.1
-networkx==2.5
-numba==0.53.0
-numpy==1.19.1
-pandas==1.1.2
-psutil==5.8.0
-PyQt5==5.15.6
-tabulate==0.8.9
+Bio==1.5.9
+biopython==1.81
+bokeh==3.2.2
+cogent3==2023.9.22a1
+colorcet==3.0.1
+cx_Freeze==6.15.8
+cx_Freeze==6.15.8
+matplotlib==3.8.0
+networkx==3.1
+numba==0.58.0
+numpy==1.25.2
+pandas==2.1.1
+psutil==5.9.5
+PyQt5==5.15.9
+PyQt5_sip==12.12.1
+tabulate==0.9.0
